--- a/social-frontend/public/index.html
+++ b/social-frontend/public/index.html
@@ -9,7 +9,8 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,500&display=swap"
     rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Social App</title>
+      
+    <title>Sociogram</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
